fix: set name on client
