# apps/backend/src/users/users.controller.ts
@@ -1,26 +1,42 @@
-import { Body, Controller, Post, Search } from '@nestjs/common';
+import { Body, Controller, Get, Post, Search, Request, UseGuards } from '@nestjs/common';
 import { ApiBody, ApiCreatedResponse, ApiResponse } from '@nestjs/swagger';
 import { SetNameDto } from './dto/set-name.dto';
 import { User } from './entities/user.entity';
 import { UsersService } from './users.service';
 import { SearchUserDto } from './dto/search-user.dto';
+import { AuthGuard } from 'src/auth/auth.guard';
 
 @Controller('user')
 export class UsersController {
   constructor(private usersService: UsersService) {}
+  @Get()
+  @UseGuards(AuthGuard)
+  @ApiResponse({ status: 403, description: 'Forbidden.' })
+  @ApiResponse({
+    status: 200,
+    description: 'The name has been successfully updated.',
+    type: User,
+  })
+  findOne(@Request() req): Promise<User> {
+    const user = req['user'] as User;
+    return this.usersService.findByAddress(user.address.toLowerCase());
+  }
+
   @Post()
+  @UseGuards(AuthGuard)
   @ApiBody({ type: SetNameDto })
   @ApiResponse({ status: 403, description: 'Forbidden.' })
   @ApiCreatedResponse({
     description: 'The name has been successfully updated.',
     type: User,
   })
-  setName(@Body() setNameDto: SetNameDto): Promise<User> {
-    const address = `0x0`;
-    return this.usersService.setName(address, setNameDto.name);
+  setName(@Request() req, @Body() setNameDto: SetNameDto): Promise<User> {
+    const user = req['user'] as User;
+    return this.usersService.setName(user.address, setNameDto.name);
   }
 
-  @Search()
+  @Post('search')
+  @UseGuards(AuthGuard)
   @ApiBody({ type: SearchUserDto })
   @ApiResponse({ status: 403, description: 'Forbidden.' })
   @ApiCreatedResponse({
